Added 10-fold experimentation results with tables and much more

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduzione}
 
-Il seguente lavoro si propone di confrontare due algoritmi di apprendimento supervisionati, \emph{REPTree} e \emph{RIPPER}: il primo sfrutta la metodologia di costruzione di alberi di decisione, il secondo quello di costruzione di regole.
+Il seguente lavoro si propone di confrontare due algoritmi di apprendimento supervisionato, \emph{REPTree} e \emph{RIPPER}: il primo sfrutta la metodologia di costruzione di alberi di decisione, il secondo quello di costruzione di regole.
 
 Verranno testati su quattro dataset messi a disposione dall'\emph{UCI Machine Learning Repository}\footnote{\url{https://archive.ics.uci.edu/ml/datasets.html}}, procedendo con la presentazione dei risultati e dei modelli di predizione ottenuti.
 
