--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,6 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \captionsetup{compatibility=false}
-%\usepackage[caption=false]{subfig}
 \usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{amsmath}
@@ -35,12 +34,8 @@
 \usepackage{floatpag}
 \usepackage[strict]{changepage}
 \usepackage{tabto}
-%\usepackage{tikz}
-%\usetikzlibrary{decorations,arrows,shapes}
-%\usepackage{booktabs}
-%\usepackage[active,float]{preview}
-%\PreviewEnvironment{tikzpicture}
-%\usepackage{pslatex}
+\usepackage{adjustbox}
+\usepackage{diagbox}
 
 \titleformat{\chapter}[hang]
 {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter:}{0.3em}{}
