--- a/data_description.tex
+++ b/data_description.tex
@@ -5,18 +5,6 @@ Di seguito vengono descritti i 4 dataset utilizzati nella sperimentazione
 
 \section{German Credit dataset}
 Il dataset contiene informazioni in ambito finanziaro su clienti ritenuti a rischio o meno.
-%\begin{table}[!htb]
-%	\centering
-%	\begin{tabular}{|r|l|}
-%		\hline
-%		Numero istanze & 1000 \\
-%		Numero attributi & 21 \\
-%		Attributo target & \textbf{class} \\
-%		Valori target & \texttt{\{good, bad\}} \\
-%		\hline
-%	\end{tabular}
-%\end{table}
-
 
 \begin{itemize}
 	\item Numero di istanze: 1000
@@ -62,18 +50,6 @@ Il dataset contiene informazioni in ambito finanziaro su clienti ritenuti a risc
 
 Il dataset contiente informazioni di sette immagini all'aperto che sono state segmentate a mano. Ogni istanza rappresenta una regione 3x3.
 
-%\begin{table}[!htb]
-%	\centering
-%	\begin{tabular}{|r|l|}
-%		\hline
-%		Numero istanze & 2310 \\
-%		Numero attributi & 20 \\
-%		Attributo target & \textbf{class}\\
-%		Valori target & \parbox{3.5cm}{\texttt{\{brickface, sky, foliage, cement, window, path, grass\}}}\\
-%		\hline
-%	\end{tabular}
-%\end{table}
-
 \begin{itemize}
 	\item Numero di istanze: 2310
 	\item Numero di attributi: 20
@@ -117,23 +93,11 @@ Il dataset contiente informazioni di sette immagini all'aperto che sono state se
 
 Il dataset contiene informazioni per discriminare le silhouette di diversi veicoli tra automobili, van e bus.
 
-%\begin{table}[!htb]
-%	\centering
-%	\begin{tabular}{|r|l|}
-%		\hline
-%		Numero istanze & 846 \\
-%		Numero attributi & 19 \\
-%		Attributo target &  \textbf{Class}\\
-%		Valori target & \texttt{\{opel, saab, bus, ban\}} \\
-%		\hline
-%	\end{tabular}
-%\end{table}
-
 \begin{itemize}
 	\item Numero di istanze: 846 
 	\item Numero di attributi: 19
 	\item Attributo target:  \textbf{Class}
-	\item Valori target: \texttt{\{opel, saab, bus, ban\}}
+	\item Valori target: \texttt{\{opel, saab, bus, van\}}
 \end{itemize}
 
 
@@ -171,18 +135,6 @@ Il dataset contiene informazioni per discriminare le silhouette di diversi veico
 \section{Wisconsin Breast Cancer dataset}
 
 Il dataset contiene informazioni riguardo a vari casi di tumore al seno, che permettono di stabilire se esso è benigno o maligno.
-
-%\begin{table}[!htb]
-%	\centering
-%	\begin{tabular}{|r|l|}
-%		\hline
-%		Numero istanze & 699 \\
-%		Numero attributi & 10 \\
-%		Attributo target &  \textbf{Class} \\
-%		Valori target & \texttt{\{benign, malignant\}} \\
-%		\hline
-%	\end{tabular}
-%\end{table}
 
 \begin{itemize}
 	\item Numero di istanze: 699
