--- a/reptree.tex
+++ b/reptree.tex
@@ -1,5 +1,5 @@
 \chapter{REPTree}
-\label{(ch:reptree)}
+\label{ch:reptree}
 
 Come primo algoritmo si è scelto di usare \textbf{REPTree}, che costruisce alberi di decisione usando l'\textit{information gain} per i valori nominali e la varianza per i valori numerici\cite{2Witten:2011:DMP:REPTree}.
 
