--- a/analysis.tex
+++ b/analysis.tex
@@ -4,12 +4,13 @@ In questo capitolo verranno analizzati i risultati dell'esperimento, ottenuti ut
 
 \section{Test}
 
-Il confronto è stato fatto su tre misure, la percentuale di predizioni corrette, la \emph{F-Measure}, che è la media armonica di precisione e richiamo:
-
-$$ F_m = 2 \cdot \frac{precision \cdot recall}{precision + recall} $$
+Il confronto è stato fatto su tre misure, la percentuale di predizioni corrette, la \emph{F-Measure}, che è la media armonica di precisione e richiamo. Per fini di completezza riportiamo le relative formule:
+$$Precision = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Positives}$$
+$$Recall = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Negastives}$$
+$$ F\mbox{-}measure = 2 \cdot \frac{Precision \cdot Recall}{Precision + Recall} $$
 
 \noindent
-e il tempo necessario per costruire il modello. Il test utilizzato è un \emph{Paired T-test}.
+Altra misura utilizzata è il tempo necessario per costruire il modello. Il test utilizzato è un \emph{Paired T-test}.
 
 Di seguito vengono mostrate le tabelle che raccolgono i risultati di esecuzione del test per le misure, più un'altra che presenta una classifica degli algoritmi.
 
