Added Naive Bayes chapter: not finished yet, FFS :(

--- a/mybib.bib
+++ b/mybib.bib
@@ -88,10 +88,22 @@
 	address = {San Francisco, CA, USA},
 }
 
-@MISC{Pagallo1990,
-	author = {Giulia Pagallo and David Haussler and Paul Rosenbloom},
-	title = {© 1990 Kluwer Academic Publishers. Manufactured in The Netherlands. Boolean Feature Discovery in Empirical Learning},
-	year = {1990}
+@article{Pagallo1990,
+ author = {Pagallo, Giulia and Haussler, David},
+ title = {Boolean Feature Discovery in Empirical Learning},
+ journal = {Mach. Learn.},
+ issue_date = {Mar. 1990},
+ volume = {5},
+ number = {1},
+ month = may,
+ year = {1990},
+ issn = {0885-6125},
+ pages = {71--99},
+ numpages = {29},
+ acmid = {83649},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {DNF functions, concept learning, decision lists, decision trees, dynamic bias},
 }
 
 @MISC{Brunk91aninvestigation,
@@ -225,3 +237,32 @@ incollection{Witten:2011:DMP:1972514,
 	address = {Washington, DC, USA},
 	keywords = {Decision trees, top-down induction of decision trees, simplification of decision trees, pruning and grafting operators, optimal pruning, comparative studies.},
 }
+
+@article{Domingos:1997:OSB:274158.274160,
+	author = {Domingos, Pedro and Pazzani, Michael},
+	title = {On the Optimality of the Simple Bayesian Classifier Under Zero-One Loss},
+	journal = {Mach. Learn.},
+	issue_date = {Nov./Dec. 1997},
+	volume = {29},
+	number = {2-3},
+	month = nov,
+	year = {1997},
+	issn = {0885-6125},
+	pages = {103--130},
+	numpages = {28},
+	acmid = {274160},
+	publisher = {Kluwer Academic Publishers},
+	address = {Hingham, MA, USA},
+	keywords = {Simple Bayesian classifier, induction with attribute dependences, naive Bayesian classifier, optimal classification, zero-one loss},
+} 
+
+@inbook{Mitchell:1997:ML:541177,
+	author = {Mitchell, Thomas M.},
+	title = {Machine Learning},
+	chapter = {6},
+	year = {1997},
+	isbn = {0070428077, 9780070428072},
+	edition = {1},
+	publisher = {McGraw-Hill, Inc.},
+	address = {New York, NY, USA},
+} 
