--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,8 @@
 \titleformat{\chapter}[hang]
 {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter:}{0.3em}{}
 
+\DeclareMathOperator*{\argmax}{argmax}
+
 \title{AI Sperimentation}
 
 \begin{document}
@@ -84,6 +86,8 @@
 	\input{introduction}
 	\clearpage
 	\input{data_description}
+	\clearpage
+	\input{bayes}
 	\clearpage
 	\input{reptree}
 	\clearpage
