--- a/execution.tex
+++ b/execution.tex
@@ -4,13 +4,17 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 
 \section{Risultati su \texttt{German Credit}}
 
-\normalsize L'esecuzione ha coinvolto 900 istanze di training e 100 istanze di testing.
+\normalsize L'esecuzione ha coinvolto 900 istanze di training e 100 istanze di testing ad ogni iterazione del CV.
+
+\begin{mdframed}[frametitle=Esecuzione NaiveBayesSimple]
+	\footnotesize\verbatiminput{results/nb/german_credit.nb}
+\end{mdframed}
+
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/german_credit.reptree}
 \end{mdframed}
 
-%\input{results/exp/gc_reptree_10fold_table}
 
 \begin{sidewaysfigure}
 	\thisfloatpagestyle{empty}
@@ -24,7 +28,6 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\footnotesize\verbatiminput{results/jrip/german_credit.jrip}
 \end{mdframed}
 
-%\input{results/exp/gc_jrip_10fold_table}
 
 \noindent
 \normalsize Regole:
@@ -32,42 +35,49 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 
 \pagebreak
 
-\section{Risultati su \texttt{Image Segmentation}}
+\section{Risultati su \texttt{Hepatitis}}
 
-\normalsize L'esecuzione ha coinvolto 2079 istanze di training e 231 istanze di testing.
+\normalsize L'esecuzione ha coinvolto 139 istanze di training e 16 istanze di testing ad ogni iterazione del CV.
 
-\begin{mdframed}[frametitle=Esecuzione REPTree]
-	\scriptsize\verbatiminput{results/reptree/segment.reptree}
+\begin{mdframed}[frametitle=Esecuzione NaiveBayesSimple]
+	\footnotesize\verbatiminput{results/nb/hepatitis.nb}
 \end{mdframed}
 
-%\input{results/exp/seg_reptree_10fold_table}
+
+\begin{mdframed}[frametitle=Esecuzione REPTree]
+	\footnotesize\verbatiminput{results/reptree/hepatitis.reptree}
+\end{mdframed}
+
 
 \begin{figure}[htb]
-	\makebox[\textwidth]{\includegraphics[width=1.55\textwidth]{results/reptree/segment.pdf}}
+	\makebox[\textwidth]{\includegraphics[width=1.55\textwidth]{results/reptree/hepatitis.pdf}}
 	\caption{Modello di REPTree}
 \end{figure}
 
 \begin{mdframed}[frametitle=Esecuzione JRip]
-	\scriptsize\verbatiminput{results/jrip/segment.jrip}
+	\footnotesize\verbatiminput{results/jrip/hepatitis.jrip}
 \end{mdframed}
 
-%\input{results/exp/seg_jrip_10fold_table}
 
 \noindent
 \normalsize Regole:
-\scriptsize\input{results/jrip/segment.list.rules}
+\footnotesize\input{results/jrip/hepatitis.list.rules}
 
 \pagebreak
 
 \section{Risultati su \texttt{Vehicle Silhouettes}}
 
-\normalsize L'esecuzione ha coinvolto 761 istanze di training e 85 istanze di testing.
+\normalsize L'esecuzione ha coinvolto 761 istanze di training e 85 istanze di testing ad ogni iterazione del CV.
+
+\begin{mdframed}[frametitle=Esecuzione NaiveBayesSimple]
+	\footnotesize\verbatiminput{results/nb/vehicle.nb}
+\end{mdframed}
+
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\scriptsize\verbatiminput{results/reptree/vehicle.reptree}
 \end{mdframed}
 
-%\input{results/exp/vcl_reptree_10fold_table}
 
 \begin{figure}[htb]
 	\makebox[\textwidth]{\includegraphics[width=1.55\textwidth]{results/reptree/vehicle.pdf}}
@@ -78,7 +88,6 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\scriptsize\verbatiminput{results/jrip/vehicle.jrip}
 \end{mdframed}
 
-%\input{results/exp/vcl_jrip_10fold_table}
 
 \noindent
 \normalsize Regole:
@@ -88,13 +97,17 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 
 \section{Risultati su \texttt{Wisconsin Breast Cancer}}
 
-\normalsize L'esecuzione ha coinvolto 629 istanze di training e 70 istanze di testing.
+\normalsize L'esecuzione ha coinvolto 629 istanze di training e 70 istanze di testing per ogni fold.
+
+
+\begin{mdframed}[frametitle=Esecuzione NaiveBayesSimple]
+	\footnotesize\verbatiminput{results/nb/wbc.nb}
+\end{mdframed}
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/wisconsin_breast_cancer.reptree}
 \end{mdframed}
 
-%\input{results/exp/wbc_reptree_10fold_table}
 
 \begin{figure}[htb]
 	\makebox[\textwidth]{\includegraphics[width=1.55\textwidth]{results/reptree/wisconsin_breast_cancer.pdf}}
@@ -105,7 +118,6 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\footnotesize\verbatiminput{results/jrip/wisconsin_breast_cancer.jrip}
 \end{mdframed}
 
-%\input{results/exp/wbc_jrip_10fold_table}
 
 \noindent
 \normalsize Regole:
