--- a/reptree.tex
+++ b/reptree.tex
@@ -45,7 +45,7 @@ L'algoritmo di REP è il seguente:
 		\item Calcolo l'accuratezza sul pruning set dell'albero completo.
 		\item Calcolo l'accuratezza sul pruning set rispetto a $v$ e al suo sottoalbero $T$.
 	\end{itemize}
-	\item Se l'accuratezza aumenta, pota. In caso di uguaglianza pota per semplificare (rasoio di Occam).
+	\item Se l'accuratezza aumenta, pota. In caso di uguaglianza pota per semplificare (\emph{rasoio di Occam}).
 \end{itemize}
 
 Inoltre è dimostrato che, tra tutti i possibili sottoalberi potati che è possibile generare, REP trova il sottalbero più piccolo e più accurato rispetto al pruning set\cite{Esposito:1997:CAM:252862.252878}.
