--- a/data_description.tex
+++ b/data_description.tex
@@ -17,77 +17,121 @@ Il dataset contiene informazioni in ambito finanziaro su clienti ritenuti a risc
 	\centering
 	\begin{tabular}{|r|l|}
 		\hline
-		Attributo & Tipo \\ 
-		\hline
-		checking\_status & nominal \\ 
-		duration & numeric \\ 
-		credit\_history & nominal \\ 
-		purpose & nominal \\ 
-		credit\_amount & numeric \\ 
-		savings\_status & nominal \\ 
-		employment & nominal \\ 
-		installment\_commitment & numeric \\ 
-		personal\_status & nominal \\ 
-		other\_parties & nominal \\ 
-		residence\_since & numeric \\ 
-		property\_magnitude & nominal \\ 
-		age & numeric \\ 
-		other\_payment\_plans & nominal \\ 
-		housing & nominal \\ 
-		existing\_credits & numeric \\ 
-		job & nominal \\ 
-		num\_dependents & numeric \\ 
-		own\_telephone & nominal \\ 
-		foreign\_worker & nominal \\ 
-		\textbf{class} & nominal \\ 
-		\hline
-	\end{tabular}
-\end{table}
-
-\pagebreak 
-
-\section{Image Segmentation dataset}
-
-Il dataset contiente informazioni di sette immagini all'aperto che sono state segmentate a mano. Ogni istanza rappresenta una regione 3x3.
-
-\begin{itemize}
-	\item Numero di istanze: 2310
-	\item Numero di attributi: 20
-	\item Attributo target: \textbf{class}
-	\item Valori target: \texttt{\{brickface, sky, foliage, cement, window, path, grass\}}
-\end{itemize}
-
-\begin{table}[!htb]
-	\centering
-	\begin{tabular}{|r|l|}
-		\hline
 		Attributo & Tipo \\
 		\hline
-		region-centroid-col & numeric \\ 
-		region-centroid-row & numeric \\ 
-		region-pixel-count & numeric \\ 
-		short-line-density-5 & numeric \\ 
-		short-line-density-2 & numeric \\ 
-		vedge-mean & numeric \\ 
-		vegde-sd & numeric \\ 
-		hedge-mean & numeric \\ 
-		hedge-sd & numeric \\ 
-		intensity-mean & numeric \\ 
-		rawred-mean & numeric \\ 
-		rawblue-mean & numeric \\ 
-		rawgreen-mean & numeric \\ 
-		exred-mean & numeric \\ 
-		exblue-mean & numeric \\ 
-		exgreen-mean & numeric \\ 
-		value-mean & numeric \\ 
-		saturation-mean & numeric \\ 
-		hue-mean & numeric \\ 
-		\textbf{class} & nominal \\ 
+		checking\_status & nominal \\
+		duration & numeric \\
+		credit\_history & nominal \\
+		purpose & nominal \\
+		credit\_amount & numeric \\
+		savings\_status & nominal \\
+		employment & nominal \\
+		installment\_commitment & numeric \\
+		personal\_status & nominal \\
+		other\_parties & nominal \\
+		residence\_since & numeric \\
+		property\_magnitude & nominal \\
+		age & numeric \\
+		other\_payment\_plans & nominal \\
+		housing & nominal \\
+		existing\_credits & numeric \\
+		job & nominal \\
+		num\_dependents & numeric \\
+		own\_telephone & nominal \\
+		foreign\_worker & nominal \\
+		\textbf{class} & nominal \\
 		\hline
 	\end{tabular}
 \end{table}
 
 \pagebreak
+
+\section{Hepatitis dataset}
+
+Il dataset contiene informazioni su un vari casi di epatite.
+
+
+\begin{itemize}
+	\item Numero di istanze: 135
+	\item Numero di attributi: 20
+	\item Attributo target: \textbf{Class}
+	\item Valori target: \texttt{\{DIE, LIVE\}}
+\end{itemize}
+
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{|r|l|}
+		\hline
+		Attributo & Tipo \\
+		\hline
+		AGE & numeric \\
+		SEX & nominal \\
+		STEROID & nominal \\
+		ANTIVIRALS & nominal \\
+		FATIGUE & nominal \\
+		MALAISE & nominal \\
+		ANOREXIA & nominal \\
+		LIVER\_BIG & nominal \\
+		LIVER\_FIRM & nominal \\
+		SPLEEN\_PALPABLE & nominal \\
+		SPIDERS & nominal \\
+		ASCITES & nominal \\
+		VARICES & nominal \\
+		BILIRUBIN & numeric \\
+		ALK\_PHOSPHATE & numeric \\
+		SGOT & numeric \\
+		ALBUMIN & numeric \\
+		PROTIME & numeric \\
+		HISTOLOGY & nominal \\
+		\textbf{Class} & nominal \\
+		\hline
+	\end{tabular}
+\end{table}
+
+\pagebreak
+
+%\section{Image Segmentation dataset}
+%
+%Il dataset contiente informazioni di sette immagini all'aperto che sono state segmentate a mano. Ogni istanza rappresenta una regione 3x3.
+%
+%\begin{itemize}
+%	\item Numero di istanze: 2310
+%	\item Numero di attributi: 20
+%	\item Attributo target: \textbf{class}
+%	\item Valori target: \texttt{\{brickface, sky, foliage, cement, window, path, grass\}}
+%\end{itemize}
+%
+%\begin{table}[!htb]
+%	\centering
+%	\begin{tabular}{|r|l|}
+%		\hline
+%		Attributo & Tipo \\
+%		\hline
+%		region-centroid-col & numeric \\
+%		region-centroid-row & numeric \\
+%		region-pixel-count & numeric \\
+%		short-line-density-5 & numeric \\
+%		short-line-density-2 & numeric \\
+%		vedge-mean & numeric \\
+%		vegde-sd & numeric \\
+%		hedge-mean & numeric \\
+%		hedge-sd & numeric \\
+%		intensity-mean & numeric \\
+%		rawred-mean & numeric \\
+%		rawblue-mean & numeric \\
+%		rawgreen-mean & numeric \\
+%		exred-mean & numeric \\
+%		exblue-mean & numeric \\
+%		exgreen-mean & numeric \\
+%		value-mean & numeric \\
+%		saturation-mean & numeric \\
+%		hue-mean & numeric \\
+%		\textbf{class} & nominal \\
+%		\hline
+%	\end{tabular}
+%\end{table}
+%
+%\pagebreak
 
 \section{Vehicle Silhouettes dataset}
 
@@ -105,27 +149,27 @@ Il dataset contiene informazioni per discriminare le silhouette di diversi veico
 	\centering
 	\begin{tabular}{|r|l|}
 		\hline
-		Attributo & Tipo. \\ 
+		Attributo & Tipo. \\
 		\hline
-		COMPACTNESS & numeric \\ 
-		CIRCULARITY & numeric \\ 
-		DISTANCE CIRCULARITY & numeric \\ 
-		RADIUS RATIO & numeric \\ 
-		PR.AXIS ASPECT RATIO & numeric \\ 
-		MAX.LENGTH ASPECT RATIO & numeric \\ 
-		SCATTER RATIO & numeric \\ 
-		ELONGATEDNESS & numeric \\ 
-		PR.AXIS RECTANGULARITY & numeric \\ 
-		MAX.LENGTH RECTANGULARITY & numeric \\ 
-		SCALED VARIANCE\_MAJOR & numeric \\ 
-		SCALED VARIANCE\_MINOR & numeric \\ 
-		SCALED RADIUS OF GYRATION & numeric \\ 
-		SKEWNESS ABOUT\_MAJOR & numeric \\ 
-		SKEWNESS ABOUT\_MINOR & numeric \\ 
-		KURTOSIS ABOUT\_MAJOR & numeric \\ 
-		KURTOSIS ABOUT\_MINOR & numeric \\ 
-		HOLLOWS RATIO & numeric \\ 
-		\textbf{Class} & nominal \\ 
+		COMPACTNESS & numeric \\
+		CIRCULARITY & numeric \\
+		DISTANCE CIRCULARITY & numeric \\
+		RADIUS RATIO & numeric \\
+		PR.AXIS ASPECT RATIO & numeric \\
+		MAX.LENGTH ASPECT RATIO & numeric \\
+		SCATTER RATIO & numeric \\
+		ELONGATEDNESS & numeric \\
+		PR.AXIS RECTANGULARITY & numeric \\
+		MAX.LENGTH RECTANGULARITY & numeric \\
+		SCALED VARIANCE\_MAJOR & numeric \\
+		SCALED VARIANCE\_MINOR & numeric \\
+		SCALED RADIUS OF GYRATION & numeric \\
+		SKEWNESS ABOUT\_MAJOR & numeric \\
+		SKEWNESS ABOUT\_MINOR & numeric \\
+		KURTOSIS ABOUT\_MAJOR & numeric \\
+		KURTOSIS ABOUT\_MINOR & numeric \\
+		HOLLOWS RATIO & numeric \\
+		\textbf{Class} & nominal \\
 		\hline
 	\end{tabular}
 \end{table}
@@ -148,18 +192,18 @@ Il dataset contiene informazioni riguardo a vari casi di tumore al seno, che per
 	\centering
 	\begin{tabular}{|r|l|}
 		\hline
-		Attributo & Tipo \\ 
+		Attributo & Tipo \\
 		\hline
-		Clump\_Thickness & numeric \\ 
-		Cell\_Size\_Uniformity & numeric \\ 
-		Cell\_Shape\_Uniformity & numeric \\ 
-		Marginal\_Adhesion & numeric \\ 
-		Single\_Epi\_Cell\_Size & numeric \\ 
-		Bare\_Nuclei & numeric \\ 
-		Bland\_Chromatin & numeric \\ 
-		Normal\_Nucleoli & numeric \\ 
-		Mitoses & numeric \\ 
-		\textbf{Class} & nominal \\ 
+		Clump\_Thickness & numeric \\
+		Cell\_Size\_Uniformity & numeric \\
+		Cell\_Shape\_Uniformity & numeric \\
+		Marginal\_Adhesion & numeric \\
+		Single\_Epi\_Cell\_Size & numeric \\
+		Bare\_Nuclei & numeric \\
+		Bland\_Chromatin & numeric \\
+		Normal\_Nucleoli & numeric \\
+		Mitoses & numeric \\
+		\textbf{Class} & nominal \\
 		\hline
 	\end{tabular}
 \end{table}
