Added NB models. TO-DO: statistical test

--- a/analysis.tex
+++ b/analysis.tex
@@ -6,7 +6,7 @@ In questo capitolo verranno analizzati i risultati dell'esperimento, ottenuti ut
 
 Il confronto è stato fatto su tre misure, la percentuale di predizioni corrette, la \emph{F-Measure}, che è la media armonica di precisione e richiamo. Per fini di completezza riportiamo le relative formule:
 $$Precision = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Positives}$$
-$$Recall = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Negastives}$$
+$$Recall = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Negatives}$$
 $$ F\mbox{-}measure = 2 \cdot \frac{Precision \cdot Recall}{Precision + Recall} $$
 
 \noindent
