--- a/bayes.tex
+++ b/bayes.tex
@@ -86,4 +86,4 @@ $$ \sigma_{kj} = \sqrt{ E[(A_k - \mu_{kj})^2 | v_j] } = \sqrt{ \frac{1}{n-1} \su
 
 Infine, serve la funzione di densità di probabilità della Gaussiana, che applicata al nostro contesto diventa:
 
-$$ P(a_i | v_j) = \frac{1}{\sqrt{2\pi} \sigma} e^{-\frac{(a_i-\mu)^2}{2\sigma^2}} $$
+$$ P(a_i | v_j) = \frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{(a_i-\mu)^2}{2\sigma^2}} $$
