--- a/execution.tex
+++ b/execution.tex
@@ -10,6 +10,8 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\footnotesize\verbatiminput{results/nb/german_credit.nb}
 \end{mdframed}
 
+\LTXtable{1.4\linewidth}{results/nb/german_credit.nbc}
+
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/german_credit.reptree}
@@ -31,7 +33,7 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 
 \noindent
 \normalsize Regole:
-\footnotesize\input{results/jrip/german_credit.list.rules}
+\input{results/jrip/german_credit.list.rules}
 
 \pagebreak
 
@@ -43,6 +45,8 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\footnotesize\verbatiminput{results/nb/hepatitis.nb}
 \end{mdframed}
 
+
+\scriptsize\input{results/nb/hepatitis.nbc}
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/hepatitis.reptree}
@@ -74,6 +78,8 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 \end{mdframed}
 
 
+\scriptsize\input{results/nb/vehicle.nbc}
+
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\scriptsize\verbatiminput{results/reptree/vehicle.reptree}
 \end{mdframed}
@@ -103,6 +109,9 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 \begin{mdframed}[frametitle=Esecuzione NaiveBayesSimple]
 	\footnotesize\verbatiminput{results/nb/wbc.nb}
 \end{mdframed}
+
+
+\footnotesize\input{results/nb/wbc.nbc}
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/wisconsin_breast_cancer.reptree}
