--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,8 @@
 {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter:}{0.3em}{}
 
 \DeclareMathOperator*{\argmax}{argmax}
+\newcommand{\makecell}[2]{\hspace{-2mm}\begin{tabu}{#1}#2\end{tabu}}
+
 
 \title{AI Sperimentation}
 
