Should be finished now, I HOPE

--- a/analysis.tex
+++ b/analysis.tex
@@ -1,130 +1,64 @@
 \chapter{Analisi}
 
-In questo capitolo verranno analizzati i risultati dell'esperimento, ottenuti utilizzando lo strumento \emph{Experimenter} di Weka. La configurazione ha riguardato un task di classificazione con una 10-fold cross validation su 4 dataset con 10 iterazioni. Gli algoritmi in gioco sono \nameref{ch:reptree} e \nameref{ch:jrip}. I risultati così ottenuti sono 800.
+In questo capitolo verranno analizzati i risultati dell'esperimento, ottenuti utilizzando un plugin di Microsoft Excel, \textbf{XLSTAT}. La configurazione ha riguardato i valori ottenuti sui quattro dataset dai tre algoritmi di interesse: \nameref{ch:bayes}, \nameref{ch:reptree} e \nameref{ch:jrip}.
 
 \section{Test}
 
-Il confronto è stato fatto su tre misure, la percentuale di predizioni corrette, la \emph{F-Measure}, che è la media armonica di precisione e richiamo. Per fini di completezza riportiamo le relative formule:
+Per confrontare gli algoritmi è necessario definire due ipotesi, quella nulla $H_0$ e quella alternativa $H_1$:
+
+\begin{itemize}
+	\item $H_0$: non ci sono differenze significative tra le variabili.
+	\item $H_1$: almeno due variabili sono significativamente diverse tra di loro.
+\end{itemize}
+
+\noindent
+Inoltre bisogna fare attenzione a scegliere lo strumento statistico adeguato, tenendo in conto alcuni aspetti:
+\begin{itemize}
+	\item Non possono essere fatte considerazioni sul tipo di distribuzione che i dati assumono.
+	\item È necessario uno test che vada bene per più di due algoritmi.
+	\item I dati non sono indipendenti tra di loro.
+\end{itemize}
+
+Per questi motivi si è scelto di utilizzare il test di \textbf{Friedman}, che è un test non-parametrico utile per gestire dati accoppiati e per funzionare con più di due algoritmi\cite{Demsar:2006:SCC:1248547.1248548}.
+
+La metrica utilizzata è la \emph{F-Measure}, che è la media armonica di precisione e richiamo. Per fini di completezza riportiamo le relative formule:
 $$Precision = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Positives}$$
 $$Recall = \frac{True\mbox{ }Positives}{True\mbox{ }Positives + False\mbox{ }Negatives}$$
 $$ F\mbox{-}measure = 2 \cdot \frac{Precision \cdot Recall}{Precision + Recall} $$
 
-\noindent
-Altra misura utilizzata è il tempo necessario per costruire il modello. Il test utilizzato è un \emph{Paired T-test}.
 
-Di seguito vengono mostrate le tabelle che raccolgono i risultati di esecuzione del test per le misure, più un'altra che presenta una classifica degli algoritmi.
+\subsubsection*{Esecuzione}
+Di seguito vengono mostrati i dati e i risultati di esecuzione del test:
 
-Come \textit{baseline} è stato scelto RIPPER. Accanto ai risultati di REPTree comparirà un pallino bianco ($\circ$) in caso di miglioramento o un pallino nero ($\bullet$) in caso di peggioramento. Se i risultati non dovessero differire in maniera statisticamente significativa, non comparirà nulla.
-
-\begin{table}[thb]
-	\footnotesize
-	{\centering \begin{tabular}{lrr@{\hspace{0.1cm}}c}
-			\\
-			\hline
-			Dataset & (1)& (2) & \\
-			\hline
-			wisconsin-breast-cancer & 95.61 & 94.77 &        \\
-			german-credit & 72.21 & 72.02 &        \\
-			segment & 95.24 & 95.26 &        \\
-			vehicle & 68.31 & 70.18 &        \\
-			\hline
-			\multicolumn{4}{c}{$\circ$, $\bullet$ miglioramento o peggioramento statisticamente significativo}\\
-		\end{tabular} \footnotesize \par}
-		\caption{\label{labelname}Confronto sulla percentuale di predizioni corrette}
+\begin{table}[!htbp]
+	\centering
+	\begin{tabular}{|l|r|r|r|}
+		\hline
+		& \multicolumn{1}{l|}{NB} & \multicolumn{1}{l|}{REPTree} & \multicolumn{1}{l|}{RIPPER} \\ \hline
+		german credit & 0,748 & 0,703 & 0,697 \\ \hline
+		hepatitis & 0,848 & 0,72 & 0,768 \\ \hline
+		vehicle & 0,422 & 0,716 & 0,68 \\ \hline
+		wisconsin bc & 0,96 & 0,939 & 0,954 \\ \hline
+	\end{tabular}
+	\caption{F-measure dei vari dataset}
+	\label{}
 \end{table}
 
-\begin{table}[thb]
-	\footnotesize
-	{\centering \begin{tabular}{lrr@{\hspace{0.1cm}}c}
-			\\
-			\hline
-			Dataset & (1)& (2) & \\
-			\hline
-			wisconsin-breast-cancer & 0.97 & 0.96 &        \\
-			german-credit & 0.81 & 0.81 &        \\
-			segment & 0.97 & 0.97 &        \\
-			vehicle & 0.47 & 0.50 &        \\
-			\hline
-			\multicolumn{4}{c}{$\circ$, $\bullet$ miglioramento o peggioramento statisticamente significativo}\\
-		\end{tabular} \footnotesize \par}
-		\caption{\label{labelname}Confronto su F-measure}
-\end{table}
-
-\begin{table}[thb]
-	\footnotesize
-	{\centering \begin{tabular}{lrr@{\hspace{0.1cm}}c}
-			\\
-			\hline
-			Dataset & (1)& (2) & \\
-			\hline
-			wisconsin-breast-cancer & 0.02 & 0.00 & \hspace{-11.5em} $\bullet$\\
-			german-credit & 0.08 & 0.01 & \hspace{-11.5em} $\bullet$\\
-			segment & 0.66 & 0.05 & \hspace{-11.5em} $\bullet$\\
-			vehicle & 0.18 & 0.02 & \hspace{-11.5em} $\bullet$\\
-			\hline
-			\multicolumn{4}{c}{$\circ$, $\bullet$ miglioramento o peggioramento statisticamente significativo}\\
-		\end{tabular} \footnotesize \par}
-		\caption{\label{labelname}Confronto sul tempo di addestramento}
-\end{table}
-
-\begin{table}[thb]
-	\footnotesize
-	{\centering \begin{tabular}{rlll}\\
-			\hline
-			Resultset & Wins$-$ & Wins & Losses \\
-			& Losses & & \\
-			\hline
-			(2) &   0 &   0 &   0\\
-			(1) &   0 &   0 &   0\\
-			\hline
-		\end{tabular} \footnotesize \par}
-		\caption{\label{labelname}Ranking sulla percentuale di predizioni corrette}
-\end{table}
-
-\begin{table}[thb]
-	\footnotesize
-	{\centering \begin{tabular}{rlll}\\
-			\hline
-			Resultset & Wins$-$ & Wins & Losses \\
-			& Losses & & \\
-			\hline
-			(2) &   0 &   0 &   0\\
-			(1) &   0 &   0 &   0\\
-			\hline
-		\end{tabular} \footnotesize \par}
-		\caption{\label{labelname}Ranking su F-measure}
-\end{table}
-
-\begin{table}[thb]
-	\footnotesize
-	{\centering \begin{tabular}{rlll}\\
-			\hline
-			Resultset & Wins$-$ & Wins & Losses \\
-			& Losses & & \\
-			\hline
-			(1) &   4 &   4 &   0\\
-			(2) &  -4 &   0 &   4\\
-			\hline
-		\end{tabular} \footnotesize \par}
-		\caption{\label{labelname}Ranking sul tempo di addestramento}
-\end{table}
-
-\begin{table}[thb]
-	\scriptsize
-	{\centering
-		\begin{tabular}{cl}\\
-			\multicolumn{2}{l}{Legenda:} \\
-			(1) & RIPPER \\
-			(2) & REPTree \\
-		\end{tabular}
-	}
+\begin{table}[!htbp]
+	\centering
+	\begin{tabular}{|l|r|}
+		\hline
+		Valore osservato & 1,500 \\ \hline
+		Valore critico & 5,991 \\ \hline
+		Gradi di libertà & 2 \\ \hline
+		p-value & 0,472 \\ \hline
+		$\alpha$ & 0,05 \\ \hline
+	\end{tabular}
+	\caption{Test di Friedman}
 \end{table}
 
 \clearpage
 
 \section{Interpretazione dei risultati}
 
-Come si evince dai risultati, i due algoritmi si eguagliano per quanto riguarda la percentuale di predizioni corrette e F-measure, in quanto nessuno si comporta statisticamente meglio o peggio rispetto all'altro, per la mancanza di pallini bianchi ($\circ$) e pallini neri ($\bullet)$ accanto ai risultati. Tutt'altra storia riguarda il tempo di costruzione del modello: REPTree si comporta peggio di RIPPER su tutti i dataset.
-
-Il \emph{ranking test} classifica gli algoritmi in base al totale di vittorie e sconfitte significative rispetto agli altri. La prima colonna è la differenza tra le vittorie e le sconfitte. Questa differenza è usata per generare il ranking. Con zero vittorie e zero sconfitte, gli algoritmi raggiungono un pareggio per percentuale di predizioni corrette e F-measure. Per quanto riguarda il tempo di addestramento, c'è una debacle evidente di REPTree rispetto a RIPPER su tutti i dataset.
-
+Visto che il p-value è più grande del livello di significatività $\alpha$ = 0.05, non si può rigettare l'ipotesi nulla $H_0$, quindi gli algoritmi non si comportano diversamente gli uni dagli altri in modo statisticamente significativo.
