--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusioni}
 
-In questo documento sono stati confrontati due algoritmi, RIPPER e REPTree, su quattro dataset provienti dall'UCI Machine Learning Repository.
+In questo documento sono stati confrontati tre algoritmi,  \nameref{ch:bayes}, \nameref{ch:reptree} e \nameref{ch:jrip}, su quattro dataset provienti dall'UCI Machine Learning Repository.
 
-I risultati hanno evidenziato un sostanziale pareggio tra le due tecniche in quanto ad efficacia di predizione, ma è chiaro il vantaggio di utilizzare RIPPER grazie al minore tempo di addestramento rispetto a REPTree.
+I risultati hanno evidenziato un pareggio tra le tre tecniche di classificazione, senza alcuna differenza significative tra di esse.
 
-In futuro si potrebbero eseguire ulteriori test su misure diverse per vagliare altri aspetti degli algoritmi.
+In futuro si potrebbero eseguire ulteriori test su nuovi dataset e con nuove misure per vagliare altri aspetti.
