--- a/main.tex
+++ b/main.tex
@@ -58,7 +58,7 @@
 	\Dipartimento{Informatica}
 	\Corso[Laurea Magistrale]{Informatica}
 	\Titoletto{Progetto di Intelligenza Artificiale}
-	\Titolo{Confronto tra due algoritmi di apprendimento}
+	\Titolo{Confronto tra algoritmi di apprendimento}
 	\NCandidato{Esaminando}
 	\Candidato[591275]{Giuseppe Rizzi}
 	\NRelatore{Docente}{Docenti}
