--- a/mybib.bib
+++ b/mybib.bib
@@ -266,3 +266,17 @@ incollection{Witten:2011:DMP:1972514,
 	publisher = {McGraw-Hill, Inc.},
 	address = {New York, NY, USA},
 } 
+
+@article{Demsar:2006:SCC:1248547.1248548,
+	author = {Dem\v{s}ar, Janez},
+	title = {Statistical Comparisons of Classifiers over Multiple Data Sets},
+	journal = {J. Mach. Learn. Res.},
+	issue_date = {12/1/2006},
+	volume = {7},
+	month = dec,
+	year = {2006},
+	issn = {1532-4435},
+	pages = {1--30},
+	numpages = {30},
+	publisher = {JMLR.org},
+} 
